// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIAssetSelector renders an asset selector 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto; margin-bottom: 0px;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-column"
          style="overflow: hidden;"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-base--ellipsis snap-ui-renderer__selector snap-ui-renderer__asset-selector mm-text--body-md-medium mm-text--ellipsis mm-box--padding-0 mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--gap-2 mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-lg"
            style="justify-content: inherit; text-align: inherit; height: inherit; min-height: 48px; max-height: 58px;"
          >
            <span
              class="mm-box mm-text mm-text--inherit mm-text--ellipsis mm-box--display-flex mm-box--width-full mm-box--color-text-default"
            >
              <div
                class="mm-box snap-ui-renderer__asset-selector-option mm-box--display-flex mm-box--gap-4 mm-box--align-items-center mm-box--width-full"
                style="overflow: hidden;"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--align-items-center"
                >
                  <div
                    class="mm-box mm-badge-wrapper mm-box--display-inline-block"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full"
                    >
                      <img
                        alt="SOL logo"
                        class="mm-avatar-token__token-image"
                        src="https://static.cx.metamask.io/api/v2/tokenIcons/assets/solana/5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/slip44/501.png"
                      />
                    </div>
                    <div
                      class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Solana logo"
                          class="mm-avatar-network__network-image"
                          src="./images/solana-logo.svg"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column"
                  style="overflow: hidden;"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md-medium mm-text--ellipsis mm-box--color-text-default"
                  >
                    Solana
                  </p>
                  <p
                    class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--color-text-alternative"
                  >
                    Solana
                  </p>
                </div>
                <div
                  class="mm-box snap-ui-renderer__asset-selector-option__balance mm-box--margin-left-auto mm-box--display-flex mm-box--flex-direction-column mm-box--text-align-end"
                >
                  <p
                    class="mm-box mm-text mm-text--body-sm-medium mm-box--color-text-default"
                  >
                    1
                     
                    SOL
                  </p>
                  <p
                    class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
                  >
                    $151.36
                  </p>
                </div>
              </div>
            </span>
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-primary-default"
              style="mask-image: url('./images/icons/arrow-down.svg');"
            />
          </button>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIAssetSelector renders inside a field 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto; margin-bottom: 0px;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <div
          class="mm-box snap-ui-renderer__field mm-box--display-flex mm-box--flex-direction-column"
          style="overflow: hidden;"
        >
          <label
            class="mm-box mm-text mm-label mm-label--html-for mm-text--body-md mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
            for="asset-selector"
          >
            Asset Selector
          </label>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-base--ellipsis snap-ui-renderer__selector snap-ui-renderer__asset-selector mm-text--body-md-medium mm-text--ellipsis mm-box--padding-0 mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--gap-2 mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-lg"
            style="justify-content: inherit; text-align: inherit; height: inherit; min-height: 48px; max-height: 58px;"
          >
            <span
              class="mm-box mm-text mm-text--inherit mm-text--ellipsis mm-box--display-flex mm-box--width-full mm-box--color-text-default"
            >
              <div
                class="mm-box snap-ui-renderer__asset-selector-option mm-box--display-flex mm-box--gap-4 mm-box--align-items-center mm-box--width-full"
                style="overflow: hidden;"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--align-items-center"
                >
                  <div
                    class="mm-box mm-badge-wrapper mm-box--display-inline-block"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full"
                    >
                      <img
                        alt="SOL logo"
                        class="mm-avatar-token__token-image"
                        src="https://static.cx.metamask.io/api/v2/tokenIcons/assets/solana/5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/slip44/501.png"
                      />
                    </div>
                    <div
                      class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Solana logo"
                          class="mm-avatar-network__network-image"
                          src="./images/solana-logo.svg"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column"
                  style="overflow: hidden;"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md-medium mm-text--ellipsis mm-box--color-text-default"
                  >
                    Solana
                  </p>
                  <p
                    class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--color-text-alternative"
                  >
                    Solana
                  </p>
                </div>
                <div
                  class="mm-box snap-ui-renderer__asset-selector-option__balance mm-box--margin-left-auto mm-box--display-flex mm-box--flex-direction-column mm-box--text-align-end"
                >
                  <p
                    class="mm-box mm-text mm-text--body-sm-medium mm-box--color-text-default"
                  >
                    1
                     
                    SOL
                  </p>
                  <p
                    class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
                  >
                    $151.36
                  </p>
                </div>
              </div>
            </span>
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-primary-default"
              style="mask-image: url('./images/icons/arrow-down.svg');"
            />
          </button>
        </div>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;
